# brr

./: .gitignore  AGENTS.md  README.md  SECURITY.md  artifacts-as-explorable-texture.md  brr  cockpit.md  context-coherence-synthesis.md  dogfooding-plan-loop.md  introspection-2026-06-30.md  mkdocs.yml  notes-control-surface.md  notes-diffense-pr-link.md  ownership-living-agency.md  pitfalls.md  playbook.md  portal-reshape-synthesis.md  portals.md  pyproject.toml  resourcing-plan-synthesis.md  review-2026-06-30.md  schedule.md  self-inject  selfhood-reshape.md  thread-of-record.md
docs/: ADOPTION.md  AGENTS_FORMAT.md  COMMANDS.md  FILES.md  PRINCIPLES.md
kb/: decision-account-centered-daemon.md  decision-brnrd-github-oauth-identity.md  decision-brnrd-rename.md  decision-bundled-docs.md  decision-cli-shape.md  decision-connectors-layering.md  decision-drop-streams.md  decision-kb-shape.md  decision-licensing-and-defense.md  decision-monorepo-structure.md  decision-pricing-shape.md  decision-remove-triage.md  decision-runtime-dependencies.md  decision-websites.md  deck-brr-current.md  deck-brr-fleet-steering.md  design-agent-dominion.md  design-agent-ergonomics.md  design-agent-visual-inspection.md  design-bench-loop.md  design-billing.md  design-brand-visual-language.md  design-brnrd-github-bot-user.md  design-brnrd-github-installation-sync.md  design-brnrd-protocol.md  design-brr-run-protocol.md  design-co-maintainer.md  design-concurrent-execution.md  design-config-layout.md  design-context-introspection.md  design-daemon-dev-reload.md  design-daemon-landing-branch.md  (+75 more)
(+207 files in other folders)
