[project]
name = "brr"
version = "0.1.0"
description = "AI agent daemon for Git repositories"
authors = [ { name = "brr Contributors" } ]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
brr = "brr.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]